<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ed_python</name>
  <version>0.0.1</version>
  <description>Python interface to ed_msgs</description>

  <author email="MatthijsBurgh@outlook.com">Matthijs van der Burgh</author>

  <maintainer email="MatthijsBurgh@outlook.com">Matthijs van der Burgh</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>ed_msgs</depend>

  <exec_depend>rospy</exec_depend>

</package>
