<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ed_python</name>
  <version>0.0.1</version>
  <description>Python interface to ed_msgs</description>

  <author email="MatthijsBurgh@outlook.com">Matthijs van der Burgh</author>

  <maintainer email="MatthijsBurgh@outlook.com">Matthijs van der Burgh</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>ed_msgs</depend>

  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-yaml</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-yaml</exec_depend>
  <exec_depend>pykdl_ros</exec_depend>
  <exec_depend>python_orocos_kdl</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend> <!--[TEMP] Waiting for change in ed_msgs -->
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_kdl</exec_depend>
  <exec_depend>tf2_pykdl_ros</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <doc_depend>python3-sphinx</doc_depend>
  <doc_depend>python-sphinx-autoapi-pip</doc_depend>
  <doc_depend>python-sphinx-rtd-theme-pip</doc_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>
